version 2022c, in progress
- Fix bug: fail after first iteration when adding a string to
  an array of strings defined within a loop (noted by Luca)
- Fix bug: corruption on extracting a "series" from a bundle
  as a matrix when the series contains NAs

2022-08-09 version 2022b
- new command/keyword "continue" for use in loops
- new option --decr for use with index loops
- new function commute(): pre/post multiplication by the
  commutation operator (replaces analogous function in the
  extra addon)
- new function sphericorr(): spherical coordinates
  representation for correlation matrices
- "garch" command: add the model order scalars (p and q) to
  the $model bundle
- "leverage" command: add $result accessor to obtain
  leverage, influence and studentized residuals as matrix
- "pergm" and "fractint" commands: use FFT for computing the
  spectrum
- "printf" command: add "\r" as a recognized escape sequence
- "smpl" command: add --dates option to resolve potential
  ambiguity of obs limits in case of annual and daily data
- "markers" command: add --from-series option
- "store" command: support saving a gretl session file (only
  in the GUI program), given the ".gretl" suffix
- "vecm" command: redefine the "order" member of the $system
  accessor to give the lag order in levels, consistent with
  the vecm documentation
- assert() function: add a "fatal" switch to abort program
  execution when an assertion fails
- deseas() function: add the option of saving the X-13ARIMA
  specification created by gretl; add option to specify the
  ARIMA model; document the verbose option
- qrdecomp() function: support column pivoting, via new
  optional third argument
- weekday() and isoweek() functions: generalize to accept
  dates in ISO 8601 "basic" format
- rank() and ginv() function: add optional tolerance
  argument
- Support direct assignment from string-values series to
  array of strings
- script editor: enhancements for Find/Replace dialog