@@ -13091,6 +13091,7 @@
 	<fnarg type="vector">c</fnarg>
 	<fnarg type="vector">r</fnarg>
 	<fnarg type="vector">b</fnarg>
+	<fnarg optional="true" type="scalarref">det</fnarg>
       </fnargs>
       <description>
 	<para>
@@ -13116,6 +13117,50 @@
 	  problema tuttavia non si presenta quando <math>T</math> è
 	  definita positiva.
 	</para>
+	<para>
+	  Se l'argomento opzionale <argname>det</argname> è presente
+	  (come puntatore), esso conterrà in uscita il determinante di
+	  <math>T</math>. Per esempio, il codice:
+	</para>
+	<code>
+	  A = unvech({3;2;1;3;2;3})    # Build a 3x3 Toeplitz matrix
+	  x = ones(3,1)                # and a 3x1 vector
+	  print A x
+	  eval A\x                     # solution via generic inversion
+	  eval det(A)                  # print the determinant
+	  a = A[1,]
+	  d = 0
+	  eval toepsolv(a, a, x, &amp;d)   # use the dedicated function
+	  print d
+	</code>
+	<para>
+	  produce
+	</para>
+	<code>
+A (3 x 3)
+
+  3   2   1 
+  2   3   2 
+  1   2   3 
+
+x (3 x 1)
+
+  1 
+  1 
+  1 
+
+     0.25000 
+ -3.3307e-17 
+     0.25000 
+
+8
+     0.25000 
+  2.7756e-17 
+     0.25000 
+
+
+d =  8.0000000
+	</code>
       </description>
     </function>
 
